src/sass/PostCard.scss
@import './Consts';

.postCard {
  display: flex;
  background-color: $purple-3;
  padding: 15px;
  margin-bottom: 20px;
  cursor: pointer;
  transition: background-color 0.4s;

  div:first-child {
    flex: 2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-right: 15px;

    img {
      border-radius: 100%;
      width: 100%;
    }
  }

  div:last-child {
    flex: 8;

    p {
      color: white;

      &.title {
        font-weight: bold;
        margin: 0;

        &::after {
          content: " ";
          display: block;
          height: 3px;
          width: 100%;
          margin-top: 10px;
          background-color: white;
        }
      }
    }
  }

  &:hover {
    background-color: $purple-4;
  }
}

